--- a/coffe/style.css
+++ b/coffe/style.css
@@ -2,35 +2,36 @@
   --clr-primary: hsla(36, 86%, 82%, 1);
 
   --clr-neutral-400: hsla(40, 80%, 10%, 1);
-  --clr-neutral-600: hsla(36, 2%, 49%, 1);
+  --clr-neutral-500: hsla(36, 2%, 49%, 1);
 
 
-  --clr-accent-500: hsla(40, 91%, 55%, 1);
   --clr-accent-600: hsla(29, 100%, 58%, 1);
+  --clr-accent-500: hsla(40, 91%, 55%, 1);
   --clr-accent-400: hsla(40, 91%, 55%, 1);
   --clr-accent-300: hsla(36, 100%, 78%, 1);
   --clr-accent-200: hsla(36, 100%, 78%, 0.62);
  
 
-  --ff-primary: "Be Vietnam Pro", sans-serif;
+  --ff-primary: "Poppins", sans-serif;
 
   --ff-body: var(--ff-primary);
   --ff-heading: var(--ff-primary);
 
   --fw-regular: 400;
-  --fw-semi-bold: 500;
+  --fw-semi-bold: 600;
   --fw-bold: 700;
 
-  --fs-300: 0.8125rem;
-  --fs-400: 0.875rem;
-  --fs-500: 0.9375rem;
-  --fs-600: 1rem;
-  --fs-700: 1.875rem;
-  --fs-800: 2.5rem;
-  --fs-900: 3.5rem;
+  --fs-300: 0.75rem;
+  --fs-300: 0.875rem;
+  --fs-400: 1rem;
+  --fs-500: 1.125rem;
+  --fs-600: 1.5rem;
+  --fs-700: 2rem;
+  --fs-800: 2.25rem;
+  --fs-900: 3rem;
 
   --fs-body: var(--fs-400);
-  --fs-primary-heading: var(--fs-800);
+  --fs-primary-heading: var(--fs-900);
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-300);
@@ -123,7 +124,7 @@ svg {
   }
 }
 
-/* general styling */
+general styling
 
 body {
   font-size: var(--fs-body);
@@ -336,36 +337,33 @@ p[data-width="wide"] {
   margin-top: var(--flow-spacer, 3em);
 }
 
-.text-primary-400 {
-  color: var(--clr-primary-400);
+.text-primary {
+  color: var(--clr-primary);
+}
+.text-accent-600 {
+  color: var(--clr-accent-600);
+}
+.text-accent-500 {
+  color: var(--clr-accent-500);
 }
 .text-accent-400 {
   color: var(--clr-accent-400);
 }
-.text-accent-100 {
-  color: var(--clr-accent-100);
+.text-accent-300 {
+  color: var(--clr-accent-300);
 }
-.text-neutral-100 {
-  color: var(--clr-neutral-100);
+.text-accent-200 {
+  color: var(--clr-accent-200);
 }
-.text-neutral-900 {
-  color: var(--clr-neutral-900);
+.text-neutral-400 {
+  color: var(--clr-neutral-400);
+}
+.text-neutral-500 {
+  color: var(--clr-neutral-500);
 }
 
-.bg-primary-400 {
-  background-color: var(--clr-primary-400);
-}
-.bg-accent-400 {
-  background-color: var(--clr-accent-400);
-}
-.bg-accent-100 {
-  background-color: var(--clr-accent-100);
-}
-.bg-neutral-100 {
-  background-color: var(--clr-neutral-100);
-}
-.bg-neutral-900 {
-  background-color: var(--clr-neutral-900);
+.bg-primary {
+  background-color: var(--clr-primary);
 }
 
 .fw-bold {
