--- a/coffe/style.css
+++ b/coffe/style.css
@@ -30,7 +30,7 @@
   --fs-800: 2.25rem;
   --fs-900: 3rem;
 
-  --fs-body: var(--fs-400);
+  --fs-body: var(--fs-500);
   --fs-primary-heading: var(--fs-900);
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
@@ -47,15 +47,6 @@
   --size-900: 5rem;
 }
 
-@media (min-width: 50em) {
-  :root {
-    --fs-body: var(--fs-500);
-    --fs-primary-heading: var(--fs-900);
-    --fs-secondary-heading: var(--fs-800);
-
-    --fs-nav: var(--fs-300);
-  }
-}
 
 // https://piccalil.li/blog/a-modern-css-reset
 
@@ -179,6 +170,11 @@ svg {
   font-weight: var(--fw-regular);
 }
 
+body {
+  font-size: var(--fs-body);
+  font-family: var(--ff-body);
+}
+
 .fs-primary-heading {
   font-size: var(--fs-primary-heading);
   line-height: 1.1;
@@ -216,4 +212,39 @@ svg {
 }
 .container {
   margin-inline: auto;
+}
+.container {
+  --max-width: 1165px;
+  --container-padding: 135px;
+  width: min(var(--max-width),100% - (var(--container-padding)*2));
+  margin-inline: auto;
+  padding-block: 1rem;
+}
+.nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  gap: clamp(1rem,4vw,3rem);
+}
+.cart-button {
+  height: 43px;
+  width: 43px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  background: none;
+}
+.small-button {
+  font-size: var(--fs-400);
+  width: 64px;
+  height: 32px;
+  cursor: pointer;
+  text-decoration: none;
+  border: 1px solid yellow;
+  border-radius: 2px;
 }
