--- a/coffe/style.css
+++ b/coffe/style.css
@@ -1,8 +1,9 @@
 :root {
-  --clr-primary: hsla(36, 86%, 82%, 1);
+  --clr-primary-500: hsla(36, 86%, 82%, 1);
+  --clr-primary-400: hsla(0, 0%, 100%, 1);
 
-  --clr-neutral-400: hsla(40, 80%, 10%, 1);
   --clr-neutral-500: hsla(36, 2%, 49%, 1);
+  --clr-neutral-400: hsla(40, 80%, 10%, 1);
 
 
   --clr-accent-600: hsla(29, 100%, 58%, 1);
@@ -34,7 +35,8 @@
   --fs-primary-heading: var(--fs-900);
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
-  --fs-button: var(--fs-300);
+  --fs-small-button: var(--fs-400);
+  --fs-normal-button: var(--fs-300);
 
   --size-100: 0.25rem;
   --size-200: 0.5rem;
@@ -132,7 +134,7 @@ svg {
 
 
 .text-primary {
-  color: var(--clr-primary);
+  color: var(--clr-primary-400);
 }
 .text-accent-600 {
   color: var(--clr-accent-600);
@@ -157,7 +159,7 @@ svg {
 }
 
 .bg-primary {
-  background-color: var(--clr-primary);
+  background-color: var(--clr-primary-400);
 }
 
 .fw-bold {
@@ -240,11 +242,50 @@ body {
   background: none;
 }
 .small-button {
-  font-size: var(--fs-400);
-  width: 64px;
-  height: 32px;
+  font-size: var(--fs-small-button);
+  font-weight: var(--fw-semi-bold);
+  width: var(--size-800);
+  height: var(--size-600);
   cursor: pointer;
   text-decoration: none;
-  border: 1px solid yellow;
-  border-radius: 2px;
+  border: 2px solid var(--clr-accent-400);
+  border-radius: var(--size-200) ;
+  color: var(--clr-accent-400);
+  background-color: white;
+  line-height: var(--size-500);
+}
+.normal-button {
+  font-size: var(--fs-normal-button);
+  font-weight: var(--fw-semi-bold);
+  width: 150px;
+  height: var(--size-700);
+  cursor: pointer;
+  text-decoration: none;
+  border-radius: var(--size-600) ;
+  color: var(--clr-primary-400);
+  background-color: var(--clr-neutral-400);
+  box-shadow: 0px 4px 32px rgba(223, 195, 124, 0.25); 
+}
+.search-bar {
+  width: 222px;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: 2px solid red;
+  border-radius: var(--size-500) ;
+  padding-right: 50px;
+  
+
+}
+.search-bar input {
+  font-size: var(--fs-300);
+  font-weight: var(--fw-regular);
+  line-height: var(--size-400);
+  border: none;
+  padding-left: 10px;
+}
+
+.search-bar button {
+  padding-left: 20px;
 }
